--- a/contact.html
+++ b/contact.html
@@ -155,56 +155,69 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-bold text-primary">Контакты</p>
-                    <h1 class="display-5 mb-5">Если у вас есть вопросы, воспользуйтесь формой ниже</h1>
-<!--                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>-->
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Имя</label>
-                                </div>
+                <p class="fs-5 fw-bold text-primary">Контакты</p>
+                
+                    <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="service-item rounded d-flex mb-4">
+                            <div class="service-img rounded ">
+                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Эл. почта</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Тема</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Сообщение</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary py-3 px-4" type="submit">Отправить</button>
+                            <div class="service-text rounded p-5">
+                                <!-- <div class="btn-square rounded-circle mx-auto mb-3">
+                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                </div> -->
+                                <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                                <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
                             </div>
                         </div>
-                    </form>
-                </div>
+
+                        <div class="service-item rounded d-flex mb-4">
+                            <div class="service-img rounded">
+                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
+                            </div>
+                            <div class="service-text rounded p-5">
+                                <!-- <div class="btn-square rounded-circle mx-auto mb-3">
+                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                </div> -->
+                                <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                                <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
+                            </div>
+                        </div>
+                        <div class="service-item rounded d-flex mb-4">
+                            <div class="service-img rounded">
+                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
+                            </div>
+                            <div class="service-text rounded p-5">
+                                <!-- <div class="btn-square rounded-circle mx-auto mb-3">
+                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                </div> -->
+                                <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                                <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
+                            </div>
+                        </div>
+                        <div class="service-item rounded d-flex mb-4">
+                            <div class="service-img rounded">
+                                <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
+                            </div>
+                            <div class="service-text rounded p-5">
+                                <!-- <div class="btn-square rounded-circle mx-auto mb-3">
+                                    <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
+                                </div> -->
+                                <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                                <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+
+
+
+
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 450px;">
                     <div class="position-relative rounded overflow-hidden h-100">
-<!--                        <iframe class="position-relative w-100 h-100"-->
-<!--                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"-->
-<!--                        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"-->
-<!--                        tabindex="0"></iframe>-->
+
                         <a class="dg-widget-link" href="http://2gis.kg/bishkek/firm/70000001019356413/center/74.60238218307497,42.88129457646936/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Бишкека</a><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/firm/70000001019356413/photos/70000001019356413/center/74.60238218307497,42.88129457646936/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/center/74.602075,42.881429/zoom/16/routeTab/rsType/bus/to/74.602075,42.881429╎Фонд Ханнса Зайделя, представительство в Центральной Азии?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Фонд Ханнса Зайделя, представительство в Центральной Азии</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":640,"height":600,"borderColor":"#a3a3a3","pos":{"lat":42.88129457646936,"lon":74.60238218307497,"zoom":16},"opt":{"city":"bishkek"},"org":[{"id":"70000001019356413"}]});</script><noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в настройках вашего браузера.</noscript>
                     </div>
-                </div>
-                <div class="social-buttons">
-                    <span class="me-3">Подпишитесь на нас: </span>
-                    <a class="btn btn-link text-light facebook" href="https://www.facebook.com/HannsSeidelStiftungZentralasien/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light twitter" href="https://twitter.com/hsfoundationca" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light instagram" href="https://www.instagram.com/hanns_seidel_foundation_ca/" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
