--- a/project.html
+++ b/project.html
@@ -168,7 +168,7 @@
                             </div> -->
                             <h4 class="mb-3">Магистратура в Казахстане</h4>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                             </div> -->
                             <h4 class="mb-3">Магистратура в Кыргызстане</h4>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                             </div> -->
                             <h4 class="mb-3">Стипендия в Германии</h4>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
