--- a/project.html
+++ b/project.html
@@ -166,9 +166,9 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Магистратура в Казахстане</h4>
+                            <h5 class="mb-3">Магистратура в Казахстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Республики Казахстан</p>
-                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text"></span>Подробнее</span></a>
                         </div>
                     </div>
                 </div>
@@ -181,9 +181,9 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-6.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Магистратура в Кыргызстане</h4>
+                            <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                             <p class="mb-4">Магистратура в Академии государственного управления при Президенте Кыргызской Республики</p>
-                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href="" class="dop-info"><i class="fa fa-plus text-primary me-2"></i><span class="dop-info__btn-text">Подробнее</span></a>
                         </div>
                     </div>
                 </div>
@@ -196,9 +196,9 @@
                             <!-- <div class="btn-square rounded-circle mx-auto mb-3">
                                 <img class="img-fluid" src="img/icon/icon-5.png" alt="Icon">
                             </div> -->
-                            <h4 class="mb-3">Стипендия в Германии</h4>
+                            <h5 class="mb-3">Стипендия в Германии</h5>
                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии для одаренных молодых людей из развивающихся стран </p>
-                            <a class="btn btn-sm" href="" style="position: absolute; bottom: 22px;"><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
