--- a/service.html
+++ b/service.html
@@ -162,9 +162,9 @@
                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">72-часовые курсы повышения квалификации для органов МСУ</h4>
+                            <h5 class="mb-3">72-часовые курсы повышения квалификации для органов МСУ</h4>
                             <p class="mb-4">Дата: 28 июля- 1 августа 2022 года. г.Бишкек</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -174,9 +174,9 @@
                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">Школа молодых фермеров</h4>
+                            <h5 class="mb-3">Школа молодых фермеров</h4>
                             <p class="mb-4">Дата: 1-2 августа 2022 года. Тонский район Основная технология выращивания картофеля. Работа с семенами</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -186,9 +186,9 @@
                             <img class="img-fluid" src="img/germany.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">Тренинг по разработке проектных предложений для привлечения финансирования</h4>
+                            <h5 class="mb-3">Тренинг по разработке проектных предложений для привлечения финансирования</h4>
                             <p class="mb-4">Участники: выпускники Фонда Ханнса Зайделя из Нарынской области 10-11 июня 2022 в г.Нарын</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -200,9 +200,9 @@
                             <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">Онлайн-конференция/семинар для личностного развития</h4>
+                            <h5 class="mb-3">Онлайн-конференция/семинар для личностного развития</h4>
                             <p class="mb-4">Роберт Гарайссен 17 мая 2022 для регистрации отправьте уведомление на адрес omurkanova-b@hss.de</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -212,9 +212,9 @@
                             <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена</h4>
+                            <h5 class="mb-3">Онлайн-тренинг для личностного развития на тему: «ЭГО! Завышенная самооценка и адекватная уверенность в себе» г-на Роберта Гарайссена</h4>
                             <p class="mb-4">Дата и время: вторник, 28 июня 2022 г., в 18.30 (время для Бишкека)</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -224,9 +224,9 @@
                             <img class="img-fluid" src="img/germany.jpg" alt="">
                         </div>
                         <div class="service-text rounded p-5">
-                            <h4 class="mb-3">Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих</h4>
+                            <h5 class="mb-3">Онлайн-конференция/лекция на тему: «Структура государственного и местного управления в Баварии - обзор», г-н Раймунд Хельфрих</h4>
                             <p class="mb-4">Дата и время : 7 июля 2022 года, 18:30</p>
-                            <a class="btn btn-sm" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
+                            <a class="btn btn-sm dop-info" href=""><i class="fa fa-plus text-primary me-2"></i>Подробнее</a>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
             <div class="row g-5">
                
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Меню</h4>
+                    <h5 class="text-white mb-4">Меню</h4>
                     <a class="btn btn-link" href="">Главная</a>
                     <a class="btn btn-link" href="">Новости</a>
                     <a class="btn btn-link" href="">Тренинги</a>
@@ -252,7 +252,7 @@
                     <a class="btn btn-link" href="">Информация для выпускников</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Контакты</h4>
+                    <h5 class="text-white mb-4">Контакты</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> 237 ул. Панфилова Бишкек, Кыргызстан</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>0 312 662 486</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i> kirgisistan@hss.de</p>
@@ -263,14 +263,14 @@
                     </div>
                 </div>
                 <!-- <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Контакты</h4>
+                    <h5 class="text-white mb-4">Контакты</h4>
                     <p>
                         <strong>Адрес:</strong>
                         237 ул. Панфилова Бишкек, Кыргызстан  
                     </p>
                 </div> -->
                 <!-- <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Quick Links</h4>
+                    <h5 class="text-white mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
@@ -278,7 +278,7 @@
                     <a class="btn btn-link" href="">Support</a>
                 </div> -->
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Подписка</h4>
+                    <h5 class="text-white mb-4">Подписка</h4>
                     <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
