--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link active">Главная</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
+                <a href="newscorrect.html" class="nav-item nav-link">Объявления</a>
                 <a href="service.html" class="nav-item nav-link">Тренинги</a>
                 <a href="project.html" class="nav-item nav-link">Стипендиальные Программы</a>
                 <a href="QA.html" class="nav-item nav-link">Вопросы и Ответы</a>
