--- a/one_video.html
+++ b/one_video.html
@@ -153,7 +153,7 @@
     <!-- vodeo -->
     <center>
         <iframe width="1080px" height="600px"
-        src="https://www.youtube.com/embed/YVkUvmDQ3HY" frameborder="0" gesture="media" allow="autoplay; encrypted-media" allowfullscreen>
+        src="https://www.youtube.com/embed/mxyB7gho7cw" frameborder="0" gesture="media" allow="autoplay; encrypted-media" allowfullscreen>
         </iframe>
         
     </center>
@@ -178,10 +178,10 @@
             <div class="row g-4 portfolio-container mb-5">
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/YVkUvmDQ3HY/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
@@ -190,10 +190,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/YVkUvmDQ3HY/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
@@ -202,10 +202,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="http://img.youtube.com/vi/YVkUvmDQ3HY/maxresdefault.jpg" alt="">
+                        <img class="img-fluid" src="http://img.youtube.com/vi/mxyB7gho7cw/maxresdefault.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
