--- a/video.html
+++ b/video.html
@@ -157,7 +157,7 @@
                         <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
@@ -169,7 +169,7 @@
                         <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
@@ -181,7 +181,7 @@
                         <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
                         <div class="">
                             <br>
-                            <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
+                            <h4 class="mb-0"><a href="./one_video.html"> Проектный менеджмент в государственном секторе </a></h4>
                             <br>
                             <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, cum reiciendis ad et sed nam, cupiditate, nostrum incidunt laudantium inventore quas repudiandae. Architecto, doloribus!</p>
                             <p class="text-primary">Книги</p>
