--- a/404.html
+++ b/404.html
@@ -53,6 +53,10 @@
             .navbar-collapse {
                 background-color: white;
             }
+
+            .col-lg-8 .text-white {
+                font-size: 60px;
+            }
         }
     </style>
 
@@ -180,8 +184,8 @@
                     <h4 class="text-white mb-4">Подписка</h4>
                     <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
-                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписаться</button>
+                        <!-- <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email"> -->
+                        <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2 bg-white text-primary" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
                     </div>
                 </div>
             </div>
