--- a/academy-tadgikistan.html
+++ b/academy-tadgikistan.html
@@ -40,9 +40,14 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
-        @media (max-width: 991px) {
+        @media (max-width: 1491px) {
             .navbar-collapse {
                 background-color: white;
+                padding: 1.5rem !important
+            }
+
+            .col-lg-8 .text-white {
+                font-size: 60px;
             }
         }
 
@@ -54,13 +59,13 @@
             color: #fff; 
         } */
 
-        #kyrgyzstan-section.active {
-            background-color: #267a8c; /* Замените этот цвет на желаемый */
+        /* #kyrgyzstan-section.active {
+            background-color: #267a8c;
         }
 
         #kyrgyzstan-section.active .elementor-heading-title {
-            color: #fff; /* Белый цвет для текста */
-        }
+            color: #fff;
+        } */
 
         /* body {
             font-family: Arial, sans-serif;
@@ -420,8 +425,8 @@
                     <h4 class="text-white mb-4">Подписка</h4>
                     <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
-                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписаться</button>
+                        <!-- <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email"> -->
+                        <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2 bg-white text-primary" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
                     </div>
                 </div>
             </div>
