--- a/video.html
+++ b/video.html
@@ -48,9 +48,14 @@
         .dropdown-item:hover{
             color: #497bb4;
         }
-        @media (max-width: 991px) {
+        @media (max-width: 1491px) {
             .navbar-collapse {
                 background-color: white;
+                padding: 1.5rem !important
+            }
+
+            .col-lg-8 .text-white {
+                font-size: 60px;
             }
         }
     </style>
@@ -178,7 +183,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded">
-                        <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg" alt="">
+                        <img class="img-fluid" src="./img/photo_2023-05-04_15-43-21.jpg " alt="">
                         <div class="">
                             <br>
                             <h4 class="mb-0"><a href="https://youtu.be/r_0JjYUe5jo"> Проектный менеджмент в государственном секторе </a></h4>
@@ -238,8 +243,8 @@
                     <h4 class="text-white mb-4">Подписка</h4>
                     <!-- <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p> -->
                     <div class="position-relative w-100">
-                        <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Подписаться</button>
+                        <!-- <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш email"> -->
+                        <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2 bg-white text-primary" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
                     </div>
                 </div>
             </div>
